Add vod and meeting support
